--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             <p>Strive to develop websites that are fully responsive and accessible, ensuring they work flawlessly across all devices and are usable by people with diverse abilities.
             </p>
             <div class="socials">
-                <a href="#" style="--i:7;"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" style="--i:8;"><i class='bx bxl-telegram' ></i></a>
-                <a href="#" style="--i:9;"><i class='bx bxl-github' ></i></a>
-                <a href="#" style="--i:10;"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.instagram.com/coding_sha/" style="--i:7;"  target="_blank"><i class='bx bxl-instagram' ></i></a>
+                <a href="#" style="--i:8;" target="_blank"><i class='bx bxl-telegram' ></i></a>
+                <a href="https://github.com/mistrytisha/DIGIBHEM" style="--i:9;" target="_blank"><i class='bx bxl-github' ></i></a>
+                <a href="https://www.linkedin.com/in/tisha-mistry-47ba86309" style="--i:10;" target="_blank"><i class='bx bxl-linkedin'></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="Updated.pdf.pdf" class="btn" target="_blank">Download CV</a>
         </div>
 
         <div class="home-image">
