--- a/index.html
+++ b/index.html
@@ -73,21 +73,21 @@
             <div class="services-box">
                 <i class='bx bx-code-alt'></i>
                 <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident similique aut odio cum fugit natus itaque at earum. Impedit, doloribus.</p>
+                <p>Passionate web development fresher with a solid foundation in HTML, CSS, and JavaScript. Proficient in creating responsive and visually appealing websites. Eager to learn and adapt to new technologies and frameworks.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="services-box">
                 <i class='bx bxs-paint'></i>
                 <h3>Graphic Design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident similique aut odio cum fugit natus itaque at earum. Impedit, doloribus.</p>
+                <p>As a graphic design fresher, I bring a fresh perspective and creativity to every project. I'm proficient in Canva. My passion for design drives me to continuously learn and improve my skills to deliver visually compelling work.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="services-box">
                 <i class='bx bxs-palette'></i>
                 <h3>Web Designer</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident similique aut odio cum fugit natus itaque at earum. Impedit, doloribus.</p>
+                <p>I specialize in creating visually stunning and user-friendly web designs that enhance user experience and engagement. My expertise includes responsive design, ensuring that websites look great on all devices, and utilizing the latest design trends and technologies.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
         </div>
