--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="project-layer">
                     <h4>Tic-tac-Toe</h4>
                     <p>Created Tic tac toe Game using Javascript </p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="https://mistrytisha.github.io/web/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="projects-box">
@@ -112,7 +112,7 @@
                 <div class="project-layer">
                     <h4>Landing Page</h4>
                     <p>Landing page created to enhance my HTML5 and CSS3 skills </p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="https://mistrytisha.github.io/landingpage/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="projects-box">
